# openSCA

./: BuildOption.cmake  CMakeLists.txt  README.md  VERSION  configure.cmake  doxyfile.in
ChangeLogs/: ChangeLog-20190612  ChangeLog-20190709  ChangeLog-20190816
cmake/common/: check_configuration.cmake  compiler_setting.cmake  doxygen.cmake  gtest.cmake  opensca_libraries.cmake
cmake/dev/: set_sources.cmake
cmake/modules/: FindAsio.cmake  Findandroid-ifaddrs.cmake
cmake/packaging/: Config.cmake.in  OPENSCAPackagingSDK.cmake
cmake/vxwroks_cmake/: vxwroks-env.cmake  vxwroks_exmple.cmake
doxygen/: complete_doxyfile_api
doxygen/pages/: mainpage.dox  opensca_footer.html  opensca_header.html
etc/: 说明.txt
frameworks/: CMakeLists.txt
frameworks/Application/: CMakeLists.txt
frameworks/Application/include/: Application_impl.h
frameworks/Application/src/: Application_impl.cpp
frameworks/ApplicationFactory/: CMakeLists.txt
frameworks/ApplicationFactory/include/: ApplicationFactorySupport.h  ApplicationFactory_impl.h  DeployStrategy.h
frameworks/ApplicationFactory/src/: ApplicationFactorySupport.cpp  ApplicationFactory_impl.cpp  DeployStrategy.cpp
frameworks/BootLoader/: CMakeLists.txt
frameworks/BootLoader/include/: LaunchNode.h
frameworks/BootLoader/src/: Bootloader.cpp  launchNode.cpp
frameworks/CF_Interface/: CMakeLists.txt
frameworks/CF_Interface/include/: CFC.h
frameworks/CF_Interface/src/: CFC.cpp  CFS.cpp  StandardEventC.cpp  StandardEventS.cpp
frameworks/DeviceMgr/: CMakeLists.txt
frameworks/DeviceMgr/include/: DeviceManager_impl.h  Device_servant.h  ExecutableDevice_servant.h  LoadableDevice_servant.h
frameworks/DeviceMgr/src/: DeviceManager_impl.cpp  DeviceManager_server.cpp  Device_servant.cpp  ExecutableDevice_servant.cpp  LoadableDevice_servant.cpp
frameworks/DomainMgr/: CMakeLists.txt
frameworks/DomainMgr/include/: DomainManager_impl.h
frameworks/DomainMgr/src/: DomainManager_impl.cpp  DomainManager_server.cpp
frameworks/File/: CMakeLists.txt
frameworks/File/src/: File_impl.cpp
frameworks/FileManager/: CMakeLists.txt
frameworks/FileManager/src/: FileManager_impl.cpp
frameworks/FileSystem/: CMakeLists.txt
frameworks/FileSystem/include/: FileSystem_impl.h
frameworks/FileSystem/src/: FileSystem_impl.cpp
frameworks/NamingService/: CMakeLists.txt
frameworks/NamingService/include/: Naming_Service.h
frameworks/NamingService/src/: Naming_Service.cpp  naming_main.cpp
frameworks/XMLParser/: CMakeLists.txt
frameworks/XMLParser/include/: DASParser.h  DCDParser.h  DPDParser.h  PRFParser.h  SADParser.h  SCDParser.h  SPDParser.h  parser_helpers.h  prop_helpers.h
frameworks/XMLParser/src/: DASParser.cpp  DCDParser.cpp  DMDParser.cpp  DPDParser.cpp  PRFParser.cpp  SADParser.cpp  SCDParser.cpp  SPDParser.cpp  WDSParser.cpp  WRSParser.cpp  parser_helpers.cpp  port_helpers.cpp  prop_helpers.cpp
frameworks/libCF_StdPorts/: CMakeLists.txt
frameworks/libCF_StdPorts/include/: ComplexDoubleC.inl  ComplexDoubleS.h  ComplexDouble_p.h  ComplexFloatC.inl  ComplexFloatS.h  ComplexFloat_p.h  ComplexLongC.inl  ComplexLongS.h  ComplexOctet_u.h  ComplexShortC.inl  ComplexShortS.h  ComplexShort_p.h  ComplexShort_u.h  CyclicBufferController.h  JTRSCorbaTypesC.h  MHALInterfaceC.h  MHALInterfaceC.inl  MHALInterfaceS.h  MHAL_PF_p.h  MHAL_PF_u.h  MHAL_WF_p.h  MHAL_WF_u.h  PacketC.h  PacketS.h  PortTypesS.h  RealDoubleC.h  RealDoubleC.inl  RealDoubleS.h  RealDouble_p.h  RealDouble_u.h  RealFloatC.h  RealFloatC.inl  RealFloatS.h  RealFloat_p.h  RealFloat_u.h  RealLongC.h  RealLongC.inl  RealLong_p.h  RealOctetC.inl  RealOctet_p.h  (+4 more)
frameworks/libCF_StdPorts/src/: ComplexDoubleC.cpp  ComplexDoubleS.cpp  ComplexDouble_p.cpp  ComplexDouble_u.cpp  ComplexFloatC.cpp  ComplexFloatS.cpp  ComplexFloat_p.cpp  ComplexFloat_u.cpp  ComplexLongC.cpp  ComplexLongS.cpp  ComplexLong_p.cpp  ComplexLong_u.cpp  ComplexOctetC.cpp  ComplexOctetS.cpp  ComplexOctet_p.cpp  ComplexOctet_u.cpp  ComplexShortC.cpp  ComplexShortS.cpp  ComplexShort_p.cpp  ComplexShort_u.cpp  CyclicBufferController.cpp  JTRSCorbaTypesC.cpp  JTRSCorbaTypesS.cpp  MHALInterfaceC.cpp  MHALInterfaceS.cpp  MHAL_PF_p.cpp  MHAL_PF_u.cpp  MHAL_WF_p.cpp  MHAL_WF_u.cpp  PacketC.cpp  PacketS.cpp  PortTypesC.cpp  PortTypesS.cpp  RealDoubleC.cpp  RealDoubleS.cpp  RealDouble_p.cpp  RealDouble_u.cpp  RealFloatC.cpp  RealFloatS.cpp  RealFloat_p.cpp  (+15 more)
frameworks/libCF_Utils/: CMakeLists.txt
frameworks/libCF_Utils/include/: AggregateDevice_impl.h  Resource_impl.h  cf_utils.h  debug.h
frameworks/libCF_Utils/src/: AggregateDevice_impl.cpp  Resource_impl.cpp  cf_utils.cpp  debug.cpp
idl/: CF.idl  ComplexDouble.idl  ComplexFloat.idl  ComplexLong.idl  ComplexOctet.idl  ComplexShort.idl  JTRSCorbaTypes.idl  MHALInterface.idl  Packet.idl  PortTypes.idl  RealOctet.idl  StandardEvent.idl  realChar.idl  realDouble.idl  realFloat.idl  realLong.idl  realShort.idl
include/CF/: ComplexDoubleC.h  ComplexDouble_u.h  ComplexFloatC.h  ComplexFloat_u.h  ComplexLongC.h  ComplexLong_p.h  ComplexLong_u.h  ComplexOctetC.h  ComplexOctetC.inl  ComplexOctetS.h  ComplexOctet_p.h  ComplexShortC.h  DASParser.h  DMDParser.h  FileManager_impl.h  File_impl.h  JTRSCorbaTypesS.h  MHALInterfaceS.inl  MHAL_PF_u.h  MHAL_WF_p.h  MHAL_WF_u.h  PacketC.inl  PacketS.inl  PortTypesC.h  RealLongS.h  RealLong_p.h  RealLong_u.h  RealOctetC.h  RealOctetS.h  RealOctet_p.h  RealShortC.h  RealShortC.inl  RealShortS.h  (+10 more)
testsuite/: CMakeLists.txt  README.md
testsuite/base_test_main/: CMakeLists.txt
testsuite/base_test_main/src/: test_interface.cpp
testsuite/test_applicationCommunication_main/: CMakeLists.txt
testsuite/test_applicationCommunication_main/src/: test_appCommunication.cpp
testsuite/test_baseInterface/: CMakeLists.txt
testsuite/test_baseInterface/include/: test_baseInterface.h  test_communicationPorts.h
testsuite/test_baseInterface/src/: test_baseInterface.cpp  test_communicationPorts.cpp
testsuite/test_utils/: CMakeLists.txt
testsuite/test_utils/include/: test_utils.h
testsuite/test_utils/src/: test_utils.cpp
(+6596 files in other folders)
